Fix layout on small screens

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -50,3 +50,7 @@
 	font-size: 60%;
 	color: white;
 }
+
+.containerMain {
+	margin-top: -40px;
+}
